<resources>
    <string name="app_name">Trakn</string>
    <string name="get_started">Get Started</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="landing_activity_short_description"><![CDATA[Crypto & Stock Market News,\nPortfolio Tracker]]></string>
    <string name="logo">TRA\nKN</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="welcome_back">Welcome\nBack</string>
    <string name="log_in">Log In</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="continue_label">Continue</string>
    <string name="portfolio">Portfolio</string>
    <string name="favorites">Favorites</string>
    <string name="news">News</string>
    <string name="markets">Markets</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stocks">Stocks</string>
    <string name="crypto">Crypto</string>
    <string name="futures">Futures</string>
    <string name="fiat">Fiat</string>
    <string name="indices">Indices</string>
</resources>