<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarketsFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/markets"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunitosans_extrabold"
            android:text="@string/markets"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/search"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconDrawable="@drawable/search_icon"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/searchbox_background"
                android:fontFamily="@font/nunitosans_regular" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/markets"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/HorizontalScrollView.SelectedOption"
                android:layout_width="@dimen/HorizontalScrollViewButtonWidth"
                android:layout_height="wrap_content"
                android:text="@string/favorites" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/HorizontalScrollView.UnselectedOption"
                android:layout_width="@dimen/HorizontalScrollViewButtonWidth"
                android:layout_height="wrap_content"
                android:text="@string/stocks" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/HorizontalScrollView.UnselectedOption"
                android:layout_width="@dimen/HorizontalScrollViewButtonWidth"
                android:layout_height="wrap_content"
                android:text="@string/crypto" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/HorizontalScrollView.UnselectedOption"
                android:layout_width="@dimen/HorizontalScrollViewButtonWidth"
                android:layout_height="wrap_content"
                android:text="@string/futures" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/HorizontalScrollView.UnselectedOption"
                android:layout_width="@dimen/HorizontalScrollViewButtonWidth"
                android:layout_height="wrap_content"
                android:text="@string/fiat" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/HorizontalScrollView.UnselectedOption"
                android:layout_width="@dimen/HorizontalScrollViewButtonWidth"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/indices" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTickers"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />
</androidx.constraintlayout.widget.ConstraintLayout>